# rust-smart-contract

./: 4hizC2stSFu1godY6zDWZshjtoTzGNhsozsGoMzYHhQdR4XGaG.export  Cargo.toml  README.md  contract_address  contract_initialized  edubukeseal.wasm.v1
concordium-out/: eSealing_schema.json  module.wasm.v1  schema.b64
edubukeseal_schema.bin/: EdubukeSeal_schema.json
src/: lib.rs
